--- a/index.html
+++ b/index.html
@@ -118,11 +118,9 @@
   <script src="plan.js"></script>
 
   <script>
-    if ('serviceWorker' in navigator) {
-      navigator.serviceWorker.register('service-worker.js')
-        .then(() => console.log('서비스 워커 등록 완료'))
-        .catch(err => console.error('서비스 워커 등록 실패', err));
-    }
+  if ('serviceWorker' in navigator) {
+    navigator.serviceWorker.register('./service-worker2.js');
+  }
   </script>
 
 </body>
