--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no, viewport-fit=cover">
   <link rel="manifest" href="./manifest.json">
   <link rel="stylesheet" href="plan.css">
   <meta name="theme-color" content="#ffffff">
@@ -24,8 +24,7 @@
   <!-- 우측: 닉네임/랭크/키/케레이 -->
   <div class="hdr-right">
     <div class="row nick">
-      <span id="headerNickname">익명</span>
-      <button id="btnEditNick" class="icon-btn" type="button" aria-label="닉네임 수정">✏️</button>
+      <span id="headerNickname">닉네임 설정</span>
       <input id="nickInput" class="nick-input" type="text" maxlength="20" placeholder="닉네임" />
     </div>
 
