--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
 
   <!-- 상단 UI -->
   <div class="adventure-header">
-    <button class="btn-home">🏠</button>
-    <div class="key-count">🔑 <span id="roseKeyCount">0</span></div>
+    <button class="btn-home">⇦</button>
+    <div class="key-count"><img class="key-icon" src="icons/key-rose.png" alt="로즈키"> <span id="roseKeyCount">0</span></div>
   </div>
 
   <!-- 적 일러스트 영역 -->
@@ -97,8 +97,10 @@
 
   <!-- HP 바 -->
   <div class="hp-bar">
-    <div class="hp-fill" style="width: 100%; height: 1vh;"></div>
+    <div class="hp-fill"></div>
+    <span class="hp-text">0 / 0</span>
   </div>
+
 
   <!-- 퍼즐판 -->
   <div class="puzzle-board">
@@ -196,30 +198,6 @@
     <div class="popupContent">
       <h2>골든 케레이 게이트</h2>
       <!-- 골든 케레이 게이트 관련 내용 -->
-    </div>
-  </div>
-
-  <!-- 3단계: 케레이 게이트 팝업 -->
-  <div class="popup" id="GateKerei">
-    <div class="popupContent">
-      <h2>케레이 게이트</h2>
-      <!-- 여기에 나중에 콘텐츠 추가 가능 -->
-    </div>
-  </div>
-  
-  <!-- 3단계: 로즈 케레이 게이트 팝업 -->
-  <div class="popup" id="GateRoseKerei">
-    <div class="popupContent">
-      <h2>로즈 케레이 게이트</h2>
-      <!-- 여기에 나중에 콘텐츠 추가 가능 -->
-    </div>
-  </div>
-  
-  <!-- 3단계: 골든 케레이 게이트 팝업 -->
-  <div class="popup" id="GateGoldKerei">
-    <div class="popupContent">
-      <h2>골든 케레이 게이트</h2>
-      <!-- 여기에 나중에 콘텐츠 추가 가능 -->
     </div>
   </div>
 
