--- a/index.html
+++ b/index.html
@@ -79,21 +79,22 @@
   <!-- 적 일러스트 영역 -->
   <div class="enemy-area">
     <div class="enemy-grid">
-      <div class="enemy-slot"></div>
-      <div class="enemy-slot"></div>
-      <div class="enemy-slot"></div>
+      <div class="monster-slot" id="monster-left"></div>
+      <div class="monster-slot" id="monster-center"></div>
+      <div class="monster-slot" id="monster-right"></div>
     </div>
   </div>
 
   <!-- 아군 카드 영역 -->
   <div class="ally-team">
     <div class="ally-slot"></div>
-    <div class="ally-slot"></div>
-    <div class="ally-slot"></div>
-    <div class="ally-slot"></div>
-    <div class="ally-slot"></div>
-    <div class="ally-slot"></div>
+    <div class="ally-slot"><img src="icons/h2.png" alt="ally 2"></div>
+    <div class="ally-slot"><img src="icons/h3.png" alt="ally 3"></div>
+    <div class="ally-slot"><img src="icons/h4.png" alt="ally 4"></div>
+    <div class="ally-slot"><img src="icons/h5.png" alt="ally 5"></div>
+    <div class="ally-slot"><img src="icons/h6.png" alt="ally 6"></div>
   </div>
+
 
   <!-- HP 바 -->
   <div class="hp-bar">
