--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 
   <!-- 아군 카드 영역 -->
   <div class="ally-team">
-    <div class="ally-slot"></div>
+    <div class="ally-slot"><img src="icons/h1.png" alt="ally 1"></div>
     <div class="ally-slot"><img src="icons/h2.png" alt="ally 2"></div>
     <div class="ally-slot"><img src="icons/h3.png" alt="ally 3"></div>
     <div class="ally-slot"><img src="icons/h4.png" alt="ally 4"></div>
