--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
     <div class="main-buttons">
       <button class="main-btn" id="btnAdventure">모험</button>
       <button class="main-btn" id="btnCardTeam">팀편성</button>
-      <button class="main-btn" id="btnCardList">카드도감</button>
-      <button class="main-btn" id="btnOpenSummon" data-popup="summonMain">소환</button>
+      <!--<button class="main-btn" id="btnCardList">카드도감</button>
+      <button class="main-btn" id="btnOpenSummon" data-popup="summonMain">소환</button>-->
     </div>
   </main>
 
@@ -87,14 +87,31 @@
 
   <!-- 아군 카드 영역 -->
   <div class="ally-team">
-    <div class="ally-slot"><img src="icons/h1.png" alt="ally 1"></div>
-    <div class="ally-slot"><img src="icons/h2.png" alt="ally 2"></div>
-    <div class="ally-slot"><img src="icons/h3.png" alt="ally 3"></div>
-    <div class="ally-slot"><img src="icons/h4.png" alt="ally 4"></div>
-    <div class="ally-slot"><img src="icons/h5.png" alt="ally 5"></div>
-    <div class="ally-slot"><img src="icons/h6.png" alt="ally 6"></div>
+    <div class="ally-slot">
+      <img src="icons/h1.png" alt="ally 1">
+      <button class="ally-button"></button>
+    </div>
+    <div class="ally-slot">
+      <img src="icons/h2.png" alt="ally2">
+      <button class="ally-button"></button>
+    </div>
+    <div class="ally-slot">
+      <img src="icons/h3.png" alt="ally3">
+      <button class="ally-button"></button>
+    </div>
+    <div class="ally-slot">
+      <img src="icons/h4.png" alt="ally4">
+      <button class="ally-button"></button>
+    </div>
+    <div class="ally-slot">
+      <img src="icons/h5.png" alt="ally5">
+      <button class="ally-button"></button>
+    </div>
+    <div class="ally-slot">
+      <img src="icons/h6.png" alt="ally6">
+      <button class="ally-button"></button>
+    </div>
   </div>
-
 
   <!-- HP 바 -->
   <div class="hp-bar">
