--- a/index.html
+++ b/index.html
@@ -79,35 +79,44 @@
   <!-- 적 일러스트 영역 -->
   <div class="enemy-area">
     <div class="enemy-grid">
-      <div class="monster-slot" id="monster-left"></div>
-      <div class="monster-slot" id="monster-center"></div>
-      <div class="monster-slot" id="monster-right"></div>
+      <div class="monster-slot" id="monster-left">
+              <img src="icons/m1.png" alt="ally3">
+
+      </div>
+      <div class="monster-slot" id="monster-center">
+              <img src="icons/m2.png" alt="ally3">
+
+      </div>
+      <div class="monster-slot" id="monster-right">
+              <img src="icons/m3.png" alt="ally3">
+
+      </div>
     </div>
   </div>
 
   <!-- 아군 카드 영역 -->
   <div class="ally-team">
-    <div class="ally-slot">
+    <div class="ally-slot" id="h1">
       <img src="icons/h1.png" alt="ally 1">
       <button class="ally-button"></button>
     </div>
-    <div class="ally-slot">
+    <div class="ally-slot" id="h2">
       <img src="icons/h2.png" alt="ally2">
       <button class="ally-button"></button>
     </div>
-    <div class="ally-slot">
+    <div class="ally-slot" id="h3">
       <img src="icons/h3.png" alt="ally3">
       <button class="ally-button"></button>
     </div>
-    <div class="ally-slot">
+    <div class="ally-slot" id="h4">
       <img src="icons/h4.png" alt="ally4">
       <button class="ally-button"></button>
     </div>
-    <div class="ally-slot">
+    <div class="ally-slot" id="h5">
       <img src="icons/h5.png" alt="ally5">
       <button class="ally-button"></button>
     </div>
-    <div class="ally-slot">
+    <div class="ally-slot" id="h6">
       <img src="icons/h6.png" alt="ally6">
       <button class="ally-button"></button>
     </div>
