--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <!-- 상단 UI -->
   <div class="adventure-header">
     <button class="btn-home">⇦</button>
-    <button id="btnToggleFooterZ" class="btn-toggle-footer">🎆</button>
+    <button id="btnToggleFooterZ" class="btn-toggle-footer">Rank 1</button>
     <div class="key-count"><img class="key-icon" src="icons/key-rose.png" alt="로즈키"> <span id="roseKeyCount">0</span></div>
   </div>
 
@@ -83,13 +83,16 @@
     </div>
     <div class="enemy-grid">
       <div class="monster-slot" id="monster-left">
-              <img src="icons/m1.png" alt="ally3">
+        <img src="enemy/a11.png" alt="enemy default">
+        <div class="enemy-turn"></div>
       </div>
       <div class="monster-slot" id="monster-center">
-              <img src="icons/m2.png" alt="ally3">
+        <img src="enemy/a21.png" alt="enemy default">
+        <div class="enemy-turn"></div>
       </div>
       <div class="monster-slot" id="monster-right">
-              <img src="icons/m3.png" alt="ally3">
+        <img src="enemy/a11.png" alt="enemy default">
+        <div class="enemy-turn"></div>
       </div>
     </div>
   </div>
@@ -183,6 +186,7 @@
   <div class="popup" id="CardTeam">
     <div class="popupContent">
       <h2>도감</h2>
+      <button id="btnGoHome">🏠 홈으로</button>1
       <button id="btnBestiary">적도감</button>
       <button onclick="resetAllLocalStorage()">전체 초기화</button>
       <button onclick="resetAllyIconsToDefault()">아이콘 초기화</button>
@@ -320,6 +324,7 @@
       <div class="ally-modal__content" id="ally-status-content"></div>
       <div class="ally-modal__footer">
         <button class="ally-modal__ok">아이콘 변경</button>
+        <button class="ally-modal__ok" id="restore-button">복구</button>
         <button class="ally-modal__ok" id="enhance-button">강화</button>
         <button class="ally-modal__ok" data-close>닫기</button>
       </div>
@@ -372,54 +377,39 @@
 <!-- 적도감 팝업 -->
 <div class="popup" id="BestiaryPopup" style="display:none">
   <div class="popupContent">
-    <h2>적 도감(간단 편집)</h2>
+    <h2>적 도감</h2>
 
     <!-- 속성 선택 -->
-    <div class="row" style="margin:8px 0 12px; display:flex; gap:8px; align-items:center;">
-      <label for="bestAttr">속성</label>
-      <select id="bestAttr">
-        <option value="s">S(적)</option>
-        <option value="m">M(백)</option>
-        <option value="e">E</option>
-        <option value="w">W</option>
-        <option value="n">N</option>
-        <option value="l">L</option>
-      </select>
-      <button id="bestClose" style="margin-left:auto">닫기</button>
+  <div class="row" style="margin:8px 0 12px; display:flex; gap:8px; align-items:center;">
+    <label>속성</label>
+    <div id="bestAttrBtns" class="attr-btns">
+      <button data-attr="1" class="attr-btn purple"></button>
+      <button data-attr="2" class="attr-btn red"></button>
+      <button data-attr="3" class="attr-btn blue"></button>
+      <button data-attr="4" class="attr-btn green"></button>
+      <button data-attr="5" class="attr-btn yellow"></button>
     </div>
+    <button id="bestClose" style="margin-left:auto">닫기</button>
+    <select id="bestAttr" hidden><option value="1"></option><option value="2"></option><option value="3"></option><option value="4"></option><option value="5"></option></select>
+  </div>
 
-    <!-- 그리드(모티프 목록) -->
+    <!-- 그리드(기본 목록) -->
     <div id="bestGrid" class="bestiary-grid"></div>
 
-    <!-- 우측/하단: 선택된 모티프 상세 -->
     <div id="bestDetail" class="bestiary-detail" style="margin-top:12px;" hidden>
       <div class="bd-head">
         <img id="bestIcon" alt="아이콘 미리보기">
         <div class="bd-meta">
-          <div class="row"><label>모티프</label><strong id="bestMotifName"></strong></div>
-          <div class="row"><label>현재 속성</label><strong id="bestAttrView"></strong></div>
+          <div class="row"><strong id="bestMotifName"></strong><strong id="bestAttrView"></strong></div>
+          <div class="btn-row">
+            <button id="bestEliteFile">엘리트 보스 일러스트 변경</button><button id="bestEliteClear">복구</button>
+          </div>        
         </div>
       </div>
 
       <div class="bd-actions">
-        <div class="col">
-          <h4>보스 일러스트</h4>
-          <img id="bestBossPrev" alt="보스 프리뷰">
-          <div class="btn-row">
-            <button id="bestBossURL">URL입력</button>
-            <button id="bestBossFile">파일업로드</button>
-            <button id="bestBossClear">기본복구</button>
-          </div>
-        </div>
-        <div class="col">
-          <h4>엘리트 보스 일러스트</h4>
-          <img id="bestElitePrev" alt="엘리트 프리뷰">
-          <div class="btn-row">
-            <button id="bestEliteURL">URL입력</button>
-            <button id="bestEliteFile">파일업로드</button>
-            <button id="bestEliteClear">기본복구</button>
-          </div>
-        </div>
+        <div class="col"><h4>보스</h4><img id="bestBossPrev" alt="보스 프리뷰"></div>
+        <div class="col"><h4>엘리트 보스</h4><img id="bestElitePrev" alt="엘리트 프리뷰"></div>
       </div>
     </div>
 
