--- a/index.html
+++ b/index.html
@@ -208,21 +208,21 @@
 
   <div class="popup" id="popup1">
     <div class="popupContent">
-      <h2>일일 과제</h2><br> <button id="diamond1" class="addbutton">🗡️</button>
+      <h2>일일 과제</h2><br> <button id="diamond1" class="addbutton">✚</button>
       <div class="taskList" data-for="popup1"></div>
     </div>
   </div>
 
   <div class="popup" id="popup2">
     <div class="popupContent">
-      <h2>습관</h2><br> <button id="diamond2" class="addbutton">🗡️</button>
+      <h2>습관</h2><br> <button id="diamond2" class="addbutton">✚</button>
       <div class="taskList" data-for="popup2"></div>
     </div>
   </div>
 
   <div class="popup" id="popup3">
     <div class="popupContent">
-      <h2>목표</h2><br> <button id="diamond3" class="addbutton">🗡️</button>
+      <h2>목표</h2><br> <button id="diamond3" class="addbutton">✚</button>
       <div class="taskList" data-for="popup3"></div>
     </div>
   </div>
